--- a/src/main/front/index.html
+++ b/src/main/front/index.html
@@ -35,10 +35,12 @@
           </form>
         </div>
       </div>
-    <div class='fieldset' id="result">
-      <div class='fieldset' id="sucesso"></div>
-      <div class='fieldset' id="exposicao"></div>
-      <div class='fieldset' id="erros"></div>
+      <div id="result-place">
+        <div class='fieldset' id="result">
+          <div class='fieldset' id="sucesso"></div>
+          <div class='fieldset' id="exposicao"></div>
+          <div class='fieldset' id="erros"></div>
+        </div>
     </div>
       <script src="./order.js"></script>
 </body>
